--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-matplotlib==3.7.2
-numpy==1.24.3
-nltk==3.8.1
-python-docx==1.0.0
-streamlit==1.35.0
-tabulate==0.9.0
+matplotlib
+numpy
+nltk
+python-docx
+streamlit
+tabulate
 
